--- a/_config.yml
+++ b/_config.yml
@@ -18,8 +18,8 @@ github:             default
 
 # personal
 location:           Shanghai
-phone:              310-318-5555
-email:              393314766@qq.com # change this to your email to receive free emails for your contact submissions via Slapform.com
+phone:              NotAvailable
+email:              string_yao@163.com # change this to your email to receive free emails for your contact submissions via Slapform.com
 
 # Other
 background_image:   /images/bg.jpg
